# HapticHatch

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
cmake/: rtsa_sdk.cmake
components/aosl/: CMakeLists.txt
components/haptic/: CMakeLists.txt  haptic.c
components/haptic/include/: haptic.h
components/haptic/test/: CMakeLists.txt
components/haptic/test/main/: CMakeLists.txt  test_haptic.c
components/rtsa_transport/: CMakeLists.txt  Kconfig  rtsa_transport.c
components/rtsa_transport/include/: rtsa_transport.h
components/rtsa_transport/test/: CMakeLists.txt
components/rtsa_transport/test/main/: CMakeLists.txt  test_rtsa_transport.c
components/sensor/: CMakeLists.txt  Kconfig  sensor.c
components/sensor/include/: sensor.h
components/sensor/test/: CMakeLists.txt
components/sensor/test/.cache/clangd/index/: test_sensor.c.1C150347F9EDD315.idx
components/sensor/test/main/: CMakeLists.txt  test_sensor.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  rtm_demo.c  rtm_demo.h  signaling_demo.c  signaling_demo.h
scripts/: setup.sh
